@@ -187,6 +187,7 @@
 #gptofoo escp2-820 printer/Epson-Stylus_Photo_820
 #gptofoo escp2-825 printer/Epson-Stylus_Photo_825
 #gptofoo escp2-830 printer/Epson-Stylus_Photo_830
+#gptofoo escp2-830u printer/Epson-Stylus_Photo_830U
 #gptofoo escp2-870 printer/Epson-Stylus_Photo_870
 #gptofoo escp2-875 printer/Epson-Stylus_Photo_875
 #gptofoo escp2-890 printer/Epson-Stylus_Photo_890
