@@ -1831,6 +1831,7 @@ Epson Stylus Photo 810         escp2-810       EPSON Stylus Photo 810
 Epson Stylus Photo 820         escp2-820       EPSON Stylus Photo 820
 Epson Stylus Photo 825         escp2-825       EPSON Stylus Photo 825
 Epson Stylus Photo 830         escp2-830       EPSON Stylus Photo 830
+Epson Stylus Photo 830U        escp2-830u      EPSON Stylus Photo 830U
 Epson Stylus Photo 870         escp2-870       EPSON Stylus Photo 870
 Epson Stylus Photo 875         escp2-875       EPSON Stylus Photo 875
 Epson Stylus Photo 890         escp2-890       EPSON Stylus Photo 890
